--- a/sass/_unittest.scss
+++ b/sass/_unittest.scss
@@ -333,7 +333,7 @@ blockquote {
 .wp-block-pullquote {
   border-top: 5px solid $primary-color !important;
   border-bottom: 5px solid $primary-color !important;
-  background-color: #eef5f8;
+  background-color: transparent;
 }
 .wp-block-quote__citation, .wp-block-quote cite, .wp-block-quote footer {
   margin-top: 10px;
